--- a/src/gui/NhanVien_GUI.form
+++ b/src/gui/NhanVien_GUI.form
@@ -86,14 +86,6 @@
                   <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="652dd" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
               <component id="ff415" class="javax.swing.JButton" binding="btnTimKiem">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -102,7 +94,7 @@
                   <text value="Tìm kiếm"/>
                 </properties>
               </component>
-              <component id="b2c3c" class="javax.swing.JButton" binding="btnThoat">
+              <component id="b2c3c" class="javax.swing.JButton" binding="btn_thoat">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -110,27 +102,11 @@
                   <text value="Thoát"/>
                 </properties>
               </component>
-              <component id="cda49" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="cda49" class="javax.swing.JComboBox" binding="cmb_locTrangThai">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-              </component>
-              <component id="26adb" class="javax.swing.JButton" binding="chứcVụButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Chức vụ"/>
-                </properties>
-              </component>
-              <component id="30a77" class="javax.swing.JButton" binding="trạngTháiButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Trạng thái"/>
-                </properties>
               </component>
               <component id="d5d4a" class="javax.swing.JLabel">
                 <constraints>
@@ -139,6 +115,26 @@
                 <properties>
                   <text value="Lọc theo"/>
                 </properties>
+              </component>
+              <component id="57ae3" class="javax.swing.JComboBox" binding="cmb_timKiem">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="5ffa8" class="javax.swing.JComboBox" binding="cmb_chonChucVu">
+                <constraints>
+                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <model/>
+                </properties>
+              </component>
+              <component id="4f2fd" class="javax.swing.JComboBox" binding="cmb_chonTrangThai">
+                <constraints>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
@@ -196,7 +192,7 @@
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <grid id="ffe30" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="ffe30" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -217,7 +213,7 @@
                           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Ngày sinh"/>
+                          <text value="Năm sinh"/>
                         </properties>
                       </component>
                       <component id="f8533" class="javax.swing.JLabel">
@@ -228,25 +224,17 @@
                           <text value="Tên nhân viên"/>
                         </properties>
                       </component>
-                      <component id="d14f6" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+                      <component id="d14f6" class="javax.swing.JTextField" binding="txt_maNV">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="c3646" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                      <component id="c3646" class="javax.swing.JTextField" binding="txt_tenNV">
                         <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="-1"/>
-                          </grid>
-                        </constraints>
-                        <properties/>
-                      </component>
-                      <component id="1c1c5" class="javax.swing.JTextField" binding="textField7" default-binding="true">
-                        <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -260,9 +248,9 @@
                           <text value="Số điện thoại"/>
                         </properties>
                       </component>
-                      <component id="8d7e" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+                      <component id="8d7e" class="javax.swing.JTextField" binding="txt_diaChi">
                         <constraints>
-                          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -276,9 +264,9 @@
                           <text value="Địa chỉ"/>
                         </properties>
                       </component>
-                      <component id="22332" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+                      <component id="22332" class="javax.swing.JTextField" binding="txt_sdt">
                         <constraints>
-                          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -292,7 +280,7 @@
                           <text value="Giới tính"/>
                         </properties>
                       </component>
-                      <component id="cfe37" class="javax.swing.JRadioButton" binding="nữRadioButton" default-binding="true">
+                      <component id="cfe37" class="javax.swing.JRadioButton" binding="rd_nu">
                         <constraints>
                           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -300,17 +288,22 @@
                           <text value="Nữ"/>
                         </properties>
                       </component>
-                      <component id="54213" class="javax.swing.JRadioButton" binding="namRadioButton" default-binding="true">
+                      <component id="54213" class="javax.swing.JRadioButton" binding="rd_nam">
                         <constraints>
-                          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="Nam"/>
                         </properties>
                       </component>
+                      <component id="fef47" class="com.toedter.calendar.JDateChooser" binding="JDate_ngaySinh" custom-create="true">
+                        <constraints>
+                          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </component>
                     </children>
                   </grid>
-                  <grid id="1c3e9" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="1c3e9" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -318,22 +311,6 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="fc0e5" class="javax.swing.JTextField" binding="textField4" default-binding="true">
-                        <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="-1"/>
-                          </grid>
-                        </constraints>
-                        <properties/>
-                      </component>
-                      <component id="329b4" class="javax.swing.JTextField" binding="textField10" default-binding="true">
-                        <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="-1"/>
-                          </grid>
-                        </constraints>
-                        <properties/>
-                      </component>
                       <component id="71868" class="javax.swing.JLabel">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -358,9 +335,9 @@
                           <text value="Lương cơ bản"/>
                         </properties>
                       </component>
-                      <component id="759e4" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+                      <component id="759e4" class="javax.swing.JTextField" binding="txt_luongCoBan">
                         <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -374,19 +351,44 @@
                           <text value="Ngày vào làm"/>
                         </properties>
                       </component>
-                      <component id="449c7" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+                      <component id="de146" class="com.toedter.calendar.JDateChooser" binding="JDate_ngayVaoLam" custom-create="true">
                         <constraints>
-                          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="-1"/>
-                          </grid>
+                          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </component>
+                      <component id="90055" class="javax.swing.JButton" binding="btn_luu">
+                        <constraints>
+                          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Lưu"/>
+                        </properties>
+                      </component>
+                      <component id="83cc1" class="javax.swing.JButton" binding="btn_huy">
+                        <constraints>
+                          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Hủy"/>
+                        </properties>
+                      </component>
+                      <hspacer id="8bb0e">
+                        <constraints>
+                          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                      <component id="17914" class="javax.swing.JComboBox" binding="cmb_chucVu">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                       </component>
-                      <vspacer id="bdd">
+                      <component id="a0936" class="javax.swing.JComboBox" binding="cmb_trangThai">
                         <constraints>
-                          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
-                      </vspacer>
+                        <properties/>
+                      </component>
                     </children>
                   </grid>
                   <component id="ccd28" class="javax.swing.JLabel">
@@ -407,7 +409,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="f82cb" class="javax.swing.JButton" binding="cậpNhậtButton" default-binding="true">
+                  <component id="f82cb" class="javax.swing.JButton" binding="btn_capNhat">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -420,7 +422,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
-                  <component id="4bb99" class="javax.swing.JButton" binding="thêmButton" default-binding="true">
+                  <component id="4bb99" class="javax.swing.JButton" binding="btn_them">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
