--- a/src/gui/NCCKVLT/NCC.form
+++ b/src/gui/NCCKVLT/NCC.form
@@ -135,8 +135,8 @@
           </grid>
           <scrollpane id="43e10">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="-1" height="400"/>
+              <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="300"/>
               </grid>
             </constraints>
             <properties/>
@@ -404,7 +404,7 @@
                           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="HỦY"/>
+                          <text value="XÓA"/>
                         </properties>
                       </component>
                     </children>
